clean up code based on error-prone